# kyouth-26

./: README.md
week1/: .gitignore  README.md  main.py  pyproject.toml
week1/queries/: avg.sql  create_table.sql  insert_job.sql  longest.sql  missing.sql  shortest.sql
week1/src/: ingestor.py  loader.py  processor.py  profiler.py
week2/: .gitignore  README.md  find_skill_gaps.py  prompt_model.py  pyproject.toml  rate_limit.txt  tag_data.py
week3/: .env.example  .gitignore  README.md  docker-compose.yml
week3/backend/: Dockerfile  pyproject.toml
week3/backend/src/: app.py
week3/backend/src/week2/: find_skill_gaps.py  jobs.db  prompt_model.py
week3/frontend/: Dockerfile  dockerignore  pyproject.toml
week3/frontend/src/: app.py
week3/frontend/src/templates/: chat_page.html
