[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]
